update todos and fixed date-tree-nav

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -6,9 +6,9 @@
 {{ define "main" }}
 <div class="blog">
   <div class="container">
-    <div class="nav nav-tree" id="st-tree">
+    <div class="nav nav-tree">
       <h1 class="title"> Blog </h1>
-      <div class="st_tree" id="st_tree">
+      <div class="st_tree">
         {{ $blogs := where (where .Site.Pages "Section" "blog") ".Params.title" "!=" nil }}
         {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
       </div>
