--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -5,13 +5,8 @@
 {{ define "main" }}
 <div class="blog">
     <div class="container">
-        <div class="nav nav-tree" id="st-tree">
-            <h1 class="title"> Weekly </h1>
-            <div class="st_tree" id="doc-nav">
-              {{ $blogs := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
-              {{ partial "navs/date-tree-nav.html" (dict "data" $blogs) }}
-            </div>
-        </div>
+      {{ $blogs := where (where .Site.Pages "Section" "weekly") ".Params.title" "!=" nil }}
+      {{ partial "navs/date-tree-nav.html" (dict "title" "Weekly" "data" $blogs "rss" "/weekly/index.xml") }}
 
         <div class="archive">
                 <div class="content">
