--- a/src/less/nav_tree.less
+++ b/src/less/nav_tree.less
@@ -7,14 +7,15 @@
 @triangle_width: 0.4rem;
 
 //height
-@icon_file_height:0.8rem;
+@icon_file_height: 0.8rem;
 @triangle_height: 0.4rem;
+
+// animation_attrs
+@animation_attrs: fadeInUp 1s;
 
 .nav-tree {
   width: @nav_width;
   padding-right: @horizontal_padding;
-  // padding-bottom: 1.2rem;
-  // font-family: 'TitilliumWeb';
 
   .title {
     margin-bottom: 1rem;
@@ -24,6 +25,7 @@
   }
   .st_tree {
     width: 100%;
+    .customAnimation(@animation_attrs);
 
     ul {
       padding-left: 1.1rem;
