--- a/src/less/about.less
+++ b/src/less/about.less
@@ -7,6 +7,7 @@
 @font_color: #3e3e3e;
 @purple_blue: #202884;
 @bg_gray_white: #fafafa;
+@tidb_red: #e6002d;
 // line
 @1px_hr_width: 1.9rem;
 
@@ -64,19 +65,17 @@ section[class^='meetup-landingpage-'] {
     align-items: center;
     margin: 2rem auto 0;
     color: @purple_blue;
-    font-weight: 600;
-    text-decoration: none;
-    cursor: pointer;
+    font-size: 0.8rem;
 
     svg {
       margin-left: 0.6rem;
     }
 
     &:hover {
-      color: #ff2c54;
+      color: @tidb_red;
 
       svg {
-        fill: #ff2c54;
+        fill: @tidb_red;
       }
     }
   }
