--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -109,7 +109,7 @@
           font-weight: 600;
         }
         tr {
-          background-color: #fff;
+          background-color: white;
           border-top: 1px solid #c6cbd1;
         }
         tr:nth-child(2n) {
