--- a/src/less/meetup.less
+++ b/src/less/meetup.less
@@ -2,11 +2,7 @@
 @import 'base.less';
 @import 'about.less';
 
-@tidb-red: #e6002d;
-@tidb-blue: #1e2f4f;
-@dark-blue: #100f2c;
-@red: #ff2c54;
-@link-blue: #202884;
+@dark_blue: #100f2c;
 
 .layout-text-on-hover {
   .image {
@@ -37,7 +33,7 @@
       right: 30px;
       opacity: 0;
       font-size: 1.6rem;
-      color: @dark-blue;
+      color: @dark_blue;
       transform: translate3d(40%, 0, 0);
       transition: transform 0s 0.2s, opacity 0.2s;
 
@@ -49,7 +45,7 @@
         width: 100%;
         height: 10px;
         z-index: -1;
-        background-color: @red;
+        background-color: @tidb_red;
         transform-origin: 0 50%;
         transform: scaleX(0);
       }
@@ -88,33 +84,20 @@ section[class^='meetup-landingpage-'] {
   h2 {
     margin: 25px 0 16px;
     font-size: 1rem;
-    color: @link-blue;
+    color: @purple_blue;
   }
 
   h3 {
     margin: 10px 0;
     font-size: 0.8rem;
     font-weight: 400;
-    color: @link-blue;
+    color: @purple_blue;
   }
 
   p {
     margin: 2px auto;
     font-weight: 300;
     font-size: 0.8rem;
-  }
-
-  .link {
-    position: relative;
-    color: @link-blue;
-    font-weight: 500;
-    letter-spacing: 2px;
-    text-decoration: none;
-    cursor: pointer;
-
-    &:hover {
-      color: @red;
-    }
   }
 
   .details {
@@ -153,7 +136,7 @@ section[class^='meetup-landingpage-'] {
   width: 100%;
   max-height: 26rem;
   padding: 0 !important;
-  background-color: @dark-blue;
+  background-color: @dark_blue;
 
   .mkdf-elements-holder-item-inner {
     position: absolute;
@@ -161,12 +144,12 @@ section[class^='meetup-landingpage-'] {
     bottom: 5rem;
     z-index: 99;
     text-align: right;
-    color: #fff;
+    color: white;
 
     h1 {
       margin-right: -4px;
       font-size: 2rem;
-      color: #fff;
+      color: white;
     }
 
     h2 {
@@ -176,7 +159,7 @@ section[class^='meetup-landingpage-'] {
     h2,
     h3,
     p {
-      color: #fff;
+      color: white;
     }
   }
 
@@ -260,7 +243,7 @@ section[class^='meetup-landingpage-'] {
           padding: 40px 20px;
           p {
             opacity: 0;
-            color: @dark-blue;
+            color: @dark_blue;
             font-size: 0.8rem;
             font-weight: 400;
             -webkit-transform: translate3d(40%, 0, 0);
