--- a/src/less/nav_tree.less
+++ b/src/less/nav_tree.less
@@ -23,6 +23,7 @@
     font-weight: 400;
     color: #142848;
   }
+
   .st_tree {
     width: 100%;
     padding-left: 0;
@@ -42,7 +43,7 @@
         padding-left: 1.1rem;
         font-size: 0.7rem;
         line-height: 1.5;
-        color: #000;
+        color: black;
       }
     }
     .open > a,
@@ -78,7 +79,7 @@
       border-width: @triangle_width @triangle_height @triangle_width
         @triangle_height;
       border-style: solid dashed dashed dashed;
-      border-color: transparent transparent transparent #000;
+      border-color: transparent transparent transparent black;
     }
     .folder.open:before {
       position: absolute;
@@ -89,7 +90,7 @@
       border-width: @triangle_height @triangle_width @triangle_height
         @triangle_width;
       border-style: solid dashed dashed dashed;
-      border-color: #000 transparent transparent transparent;
+      border-color: black transparent transparent transparent;
     }
   }
 }
