--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -25,7 +25,7 @@
             </li>
             <li class="meta-item">
               {{ partial "svgs/icon-author.svg" (dict "fill" "#040000" "width" 18 "height" 18 ) }}
-              {{ .Params.author }}
+              {{ range .Params.author }} {{ . }}  {{ end }}
             </li>
           </ul>
           <div class="blog-text">{{ .Content }}</div>
