--- a/layouts/partials/navs/date-tree-nav.html
+++ b/layouts/partials/navs/date-tree-nav.html
@@ -3,7 +3,9 @@
 <div class="nav nav-tree">
     <h1 class="title">
       {{ .title }}
-      <a class="rss" href="{{.rss}}" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a>
+      {{ if $rss }}
+        <a class="rss" href="{{.rss}}" title="RSS Feed">{{ partial "svgs/icon-rss.svg" (dict "fill" "#3A59F0" "width" 13 "height" 17 ) }}</a>
+      {{ end}}
     </h1>
     <ul class="st_tree" style="display:none;">
         {{ range .data.GroupByDate "2006" }}
