fixed code style in content

--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -160,6 +160,12 @@
         .f-brk;
         overflow: auto;
       }
+
+      pre code {
+        border: none;
+        padding: 0;
+        margin: 0;
+      }
       .blog-post-meta {
         padding-left: 0;
         margin-bottom: 1rem;
