styles and templates: update header and add timestamp for pdf

--- a/layouts/docs-cn/single.html
+++ b/layouts/docs-cn/single.html
@@ -12,9 +12,9 @@
   <div class="container">
     <div class="nav nav-tree">
       <h1 class="title"> 文档 </h1>
-      <div class="st_tree" id="st-tree">
+      <div class="st_tree">
         {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.docs_cn_toc "global" .) }}
-       </div>
+      </div>
     </div>
 
     <div class="archive">
@@ -41,9 +41,8 @@
                   <i class="icon">{{ partial "svgs/icon-print.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>打印</span>
                 </a>
             </div>
-            <!-- TODO: add timestamp  -->
             <div class="item">
-                <a href="http://download.pingcap.org/tidb-manual-cn.pdf" download="tidb-manual-cn.pdf">
+                <a href="http://download.pingcap.org/tidb-manual-cn.pdf?v={{ now.Unix }}" download="tidb-manual-cn.pdf">
                   <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>下载</span>
                 </a>
             </div>
