--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -40,8 +40,7 @@
                 </a>
             </div>
             <div class="item">
-              <!-- TODO: add timestamp -->
-                <a href="http://download.pingcap.org/tidb-manual-en.pdf" download="tidb-manual-en.pdf">
+                <a href="http://download.pingcap.org/tidb-manual-en.pdf?v={{ now.Unix }}" download="tidb-manual-en.pdf">
                   <i class="icon">{{ partial "svgs/icon-download.svg" (dict "fill" "#040000" "width" 22 "height" 22 ) }}</i><span>Download</span>
                 </a>
             </div>
