--- a/layouts/partials/navs/tree-nav.html
+++ b/layouts/partials/navs/tree-nav.html
@@ -6,7 +6,7 @@
     {{else}}
     <li>
         <i class="icon"></i>
-        <a href="{{ .link }}">{{ .name }}</a>
+        <a href="{{ .link | urlize }}">{{ .name }}</a>
     </li>
     {{end}}
   {{end}}
