--- a/layouts/recruit/single.html
+++ b/layouts/recruit/single.html
@@ -8,11 +8,9 @@
   <div class="container">
     <div class="nav nav-tree">
         <h1 class="title"> 招聘职位 </h1>
-         {{ .Site.Data.all.people }}
-        <div class="st_tree" id="recruit-nav">
-          {{ range .Site.Data.all.recruits_contents }}
-          {{ end }}
-         </div>
+        <div class="st_tree">
+          {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_toc "global" .) }}
+        </div>
     </div>
 
     <div class="archive">
