--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -3,7 +3,7 @@
 @import './base.less';
 @import './header.less';
 @import './footer.less';
-@import './nav_tree.less';
+@import './nav.less';
 
 // color
 @text_color: #3e3e3e;
@@ -15,7 +15,7 @@
 .weekly,
 .meetup,
 .recruit {
-  padding: calc(~'1rem + @{header_height}') @horizontal_padding;
+  padding: calc(~'1rem + @{header_height}') @horizontal_padding 2rem;
   min-height: calc(~'100vh - @{header_height}');
   .container {
     flex-flow: row wrap;
@@ -191,7 +191,7 @@
       margin: 2rem 0 1rem;
     }
     .operate {
-      margin-top: 4rem;
+      margin-top: 2rem;
       border-top: 2px solid #000;
       display: flex;
       flex-flow: row wrap;
