--- a/layouts/partials/header-cn.html
+++ b/layouts/partials/header-cn.html
@@ -1,14 +1,26 @@
 <header id="header" role="navigation">
-  <nav class="container">
+  <div class="container">
     <a class="nav-brand" href="/"><img src="https://download.pingcap.com/images/pingcap_logo.png" alt="pingCAP"></a>
-    {{ $nav_active := $.Scratch.Get "nav_active" }}
-    <ul class="navigations">
-      <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn">文档</a></li>
-      <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
-      <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li>
-      <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
-      <li><a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a></li>
-    </ul>
-     {{ partial "search/ui.html" . }}
-  </nav>
+    <div class="navigations">
+      {{ $nav_active := $.Scratch.Get "nav_active" }}
+      <ul>
+        <li {{ if eq $nav_active "docs"}}class="sel"{{end}}><a href="/docs-cn">文档</a></li>
+        <li {{ if eq $nav_active "blog"}}class="sel"{{end}}><a href="/blog-cn">博客</a></li>
+        <li {{ if eq $nav_active "meetup"}}class="sel"{{end}}><a href="/meetup">Meetup</a></li>
+        <li {{ if eq $nav_active "about"}}class="sel"{{end}}><a href="/about-cn">关于</a></li>
+      </ul>
+      <a class="link-download" href="https://pingcap.com/doc-ansible-deployment-zh">
+        {{ partial "svgs/icon-download-tidb.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}
+      </a>
+      <!-- <a class="btn-download" href="https://pingcap.com/doc-ansible-deployment-zh"> 下载 </a> -->
+      <div class="global-search">
+        <button class="btn-search">{{ partial "svgs/icon-search.svg" (dict "fill" "#fff" "width" 20 "height" 20 ) }}</button>
+        <div class="search-wrapper">
+          {{ partial "search/ui.html" . }}
+          <button class="btn-cancel">{{ partial "svgs/icon-cross.svg" (dict "fill" "#fff" "width" 10 "height" 10 ) }}</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </header>
