--- a/layouts/recruit-cn/single.html
+++ b/layouts/recruit-cn/single.html
@@ -9,10 +9,8 @@
   <div class="container">
     <div class="nav nav-tree">
         <h1 class="title"> 招聘职位 </h1>
-         {{ .Site.Data.all.people }}
-        <div class="st_tree" id="recruit-nav">
-          {{ range .Site.Data.all.recruits_contents }}
-          {{ end }}
+         <div class="st_tree">
+           {{ partial "navs/tree-nav.html" (dict "tree" .Site.Data.recruit_cn_toc "global" .) }}
          </div>
     </div>
 
