--- a/src/less/header.less
+++ b/src/less/header.less
@@ -11,7 +11,6 @@
 @search_box_width: 15rem;
 
 header {
-  // padding: @horizontal_padding;
   width: 100%;
   background-color: @bg_black_with_alpha90;
 
@@ -27,17 +26,15 @@ header {
     img {
       display: block;
       height: 100%;
-      // margin-top: @horizontal_padding;
     }
   }
 
   .container {
     display: flex;
-    // flex-flow: row wrap;
+    flex-flow: row wrap;
     align-items: center;
     justify-content: space-between;
-    // min-height: @nav_height;
-    // line-height: @nav_height;
+    padding: 0 @horizontal_padding;
 
     .navigations {
       display: flex;
@@ -98,6 +95,7 @@ header {
         align-items: center;
         position: relative;
         padding: @horizontal_padding 0;
+        min-width: calc(~'20px + @{horizontal_padding}');
         background: transparent;
         transition: background 0.3s ease, transform 0.3s ease, width 0.3s ease;
 
