--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -20,7 +20,7 @@
   .title {
     display: flex;
     align-items: baseline;
-    margin: 25px 0 15px;
+    margin: 1.8rem 0 1rem;
     font-size: 1.2rem;
     font-weight: 400;
     color: @title_color;
