--- a/src/less/base.less
+++ b/src/less/base.less
@@ -86,6 +86,10 @@
 .rounded-corners (@radius: 3px) {
   border-radius: @radius;
 }
+// hover
+.hover (@color: fade(white, 70%)) {
+  color: @color;
+}
 
 // animations
 .customAnimation (@animation_attrs) {
