style: search box in mobile

--- a/layouts/partials/search/ui.html
+++ b/layouts/partials/search/ui.html
@@ -10,8 +10,11 @@
         background: #fafafa;
         border-radius: 3px;
         /*overflow: auto;*/
-        box-shadow: 0 1px 0 0 rgba(0, 0, 0, .2), 0 2px 3px 0 rgba(0, 0, 0, .1);
+        /*box-shadow: 0 1px 0 0 rgba(0, 0, 0, .2), 0 2px 3px 0 rgba(0, 0, 0, .1);*/
         font-size: 16px;
+    }
+    .algolia-autocomplete .ds-dropdown-menu [class^="ds-dataset-"] {
+      border: none!important;
     }
 
     .algolia-autocomplete .algolia-docsearch-suggestion {
@@ -37,15 +40,19 @@
     }
 
     @media (max-width: 600px) {
-        .algolia-autocomplete .ds-dropdown-menu {
-            z-index: 100;
-            position: fixed!important;
-            top: 40px!important;
-            left: auto!important;
-            right: 1rem!important;
-            width: 300px;
-            max-width: calc(100% - 2rem);
-            max-height: calc(100% - 5rem);
+       .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu {
+            /*z-index: 100;*/
+            max-width: calc(100vw) !important;
+            top: 40px !important;
+            left: 55% !important;
+            right: auto !important;
+            margin-left: -150px;
+            /*max-width: calc(100% - 2rem);
+            max-height: calc(100% - 5rem);*/
+        }
+
+        .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu [class^="ds-dataset-"] {
+          max-width: calc(100vw - 20px);
         }
     }
 
