--- a/src/less/header.less
+++ b/src/less/header.less
@@ -75,11 +75,13 @@ header {
         }
       }
 
-      .link-download:hover,
-      .btn-search:hover {
-        svg,
-        svg * {
-          fill: fade(white, 70%) !important;
+      .link-download {
+        margin-left: 0.6rem;
+        &:hover {
+          svg,
+          svg * {
+            fill: fade(white, 70%) !important;
+          }
         }
       }
     }
@@ -109,6 +111,7 @@ header {
         display: none;
 
         &.show {
+          position: relative;
           display: flex;
           justify-content: space-between;
           width: @search_box_width;
