style: fixed search box style in iphone5

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -8,7 +8,7 @@
 @header_height: calc(~'1.5rem + '@search_box_height);
 
 // width
-@search_box_width: 15rem;
+@search_box_width: 14rem;
 
 header {
   width: 100%;
@@ -76,7 +76,7 @@ header {
       }
 
       .link-download {
-        margin-left: 0.6rem;
+        margin: 0 0.6rem;
         &:hover {
           svg,
           svg * {
@@ -91,7 +91,7 @@ header {
       align-items: center;
       position: relative;
       padding: @horizontal_padding 0;
-      margin-left: 10px;
+      // margin-left: 10px;
       min-width: calc(~'20px + @{horizontal_padding}');
       background: transparent;
       transition: background 0.3s ease, transform 0.3s ease, width 0.3s ease;
@@ -127,9 +127,9 @@ header {
 
       #search-input {
         position: relative;
-        width: calc(~'100% - 35px');
+        width: calc(~'@{search_box_width} - 2rem');
         height: 100%;
-        padding: 0.5rem 0.5rem 0.5rem 1.2rem;
+        padding: 0.5rem 0.5rem 0.5rem 1.5rem;
         border: none;
         outline: 0;
         background-color: transparent;
