--- a/layouts/partials/search/ui.html
+++ b/layouts/partials/search/ui.html
@@ -9,8 +9,6 @@
         margin: 4 0 4 0;
         background: #fafafa;
         border-radius: 3px;
-        /*overflow: auto;*/
-        /*box-shadow: 0 1px 0 0 rgba(0, 0, 0, .2), 0 2px 3px 0 rgba(0, 0, 0, .1);*/
         font-size: 16px;
     }
     .algolia-autocomplete .ds-dropdown-menu [class^="ds-dataset-"] {
@@ -41,18 +39,20 @@
 
     @media (max-width: 600px) {
        .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu {
-            /*z-index: 100;*/
-            max-width: calc(100vw) !important;
-            top: 40px !important;
-            left: 55% !important;
-            right: auto !important;
-            margin-left: -150px;
-            /*max-width: calc(100% - 2rem);
-            max-height: calc(100% - 5rem);*/
+         position: fixed !important;
+           z-index: 100;
+           max-width: 340px !important;
+           min-width: 310px;
+           width: 100%;
+           top: 155px !important;
+           left: 50% !important;
+           right: auto !important;
+           transform: translateX(-50%);
         }
 
         .search-wrapper.show .algolia-autocomplete .ds-dropdown-menu [class^="ds-dataset-"] {
-          max-width: calc(100vw - 20px);
+          max-width: 100%;
+          /*overflow-y: auto;*/
         }
     }
 
