--- a/layouts/docs-cn/list.html
+++ b/layouts/docs-cn/list.html
@@ -1,4 +1,4 @@
-{{ define "title" }} Doc {{ end }}
+{{ define "title" }} 文档 {{ end }}
 
 {{ define "headcss" }}
   {{$.Scratch.Set "nav_active" "docs"}}
