styles: add github-markdown.less for content in markdown

--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -10,7 +10,7 @@
     {{ partial "navs/date-tree-nav.html" (dict "title" "Blog" "data" $blogs "rss" "/blog/index.xml") }}
 
     <div class="archive">
-      <div class="content">
+      <div class="content markdown-body">
         <h1 class="title">{{ .Title }}</h1>
         <ul class="blog-post-meta">
           <li class="meta-item">
