--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="archive">
-        <div class="content">
+        <div class="content markdown-body">
           {{ .Content }}
         </div>
         <div class="article-toc"></div>
