--- a/layouts/weekly/single.html
+++ b/layouts/weekly/single.html
@@ -9,7 +9,7 @@
       {{ partial "navs/date-tree-nav.html" (dict "title" "Weekly" "data" $blogs "rss" "/weekly/index.xml") }}
 
         <div class="archive">
-                <div class="content">
+                <div class="content markdown-body">
                     <h1 class="title">{{ .Title }}</h1>
                     <ul class="blog-post-meta">
                         <li class="meta-item">
