--- a/src/less/doc.less
+++ b/src/less/doc.less
@@ -1,5 +1,5 @@
 /* docs page */
-
+@import './github-markdown.less';
 @import './base.less';
 @import './header.less';
 @import './footer.less';
@@ -35,12 +35,14 @@
   .list,
   .archive {
     flex-basis: 65%;
+    overflow: auto;
 
     h1,
     h2,
     h3,
     h4 {
-      margin: 1.8rem 0 1rem;
+      margin-bottom: 1rem;
+      // margin: 1.8rem 0 1rem;
       font-weight: 400;
       color: @title_color;
     }
