--- a/layouts/blog-cn/single.html
+++ b/layouts/blog-cn/single.html
@@ -11,7 +11,7 @@
       {{ partial "navs/date-tree-nav.html" (dict "title" "博客" "data" $blogs "rss" "/blog-cn/index.xml") }}
 
         <div class="archive">
-                <div class="content">
+                <div class="content markdown-body">
                     <h1 class="title">{{ .Title }}</h1>
                     <ul class="blog-post-meta">
                         <li class="meta-item">
