--- a/layouts/meetup/single.html
+++ b/layouts/meetup/single.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="archive">
-        <div class="content">
+        <div class="content markdown-body">
           <h1 class="title">{{ .Title }}</h1>
           <ul class="blog-post-meta">
             <li class="meta-item">
