--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -20,7 +20,8 @@
   .title {
     display: flex;
     align-items: baseline;
-    margin: 1.8rem 0 1rem;
+    // margin: 1.8rem 0 1rem;
+    margin-bottom: 1rem;
     font-size: 1.2rem;
     font-weight: 400;
     color: @title_color;
